# nn-landing-poc

./: .gitignore  README.md  walkthrough.md
.github/workflows/: dry-run.yml  publish-gh-pages.yml
generate_data/: flake.nix  pyproject.toml  quadcopter.py
nn/: Cargo.toml  flake.nix  pyproject.toml
nn/.github/workflows/: dry-run.yml
nn/src/: data.rs  lib.rs  model.rs  plot.rs  simulate.rs  training.rs
slides/: flake.nix  package-lock.json  package.json
slides/src/: index.html  main.js
